--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,30 +1,16 @@
 $point-color: #ff684d;
 $primary-color: #262626;
-$primary-variant: #666666;
+$primary-variant: #a6a6a6;
 $secondary-color: #cbcbcb;
 $secondary-variant: #f2f2f2;
 $background: #fff;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-}
-
-#app {
-  height: 100vh;
-}
-
-#header {
-  padding: 6px 12px;
-}
-
-mark {
-  color: $background;
-  background: $primary-color;
+@function colorOpacity($color, $opacity) {
+  @return $color + $opacity;
 }
 
 @import './import/_layout';
-@import './import/_features';
-@import './import/_components';
 @import './import/_dialog';
+@import './import/_common';
+@import './import/features/_index';
+@import './import/components/_index';
